test/e2e/chainsaw/httproute-label/assertions/httproute-with-label.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-basic
  namespace: default
  labels:
    rollouts.argoproj.io/gatewayapi-canary: in-progress
