test/e2e/chainsaw/httproute-label/resources/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-basic
  namespace: default
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: default
  rules:
    - backendRefs:
        - name: httproute-label-stable-service
          port: 80
        - name: httproute-label-canary-service
          port: 80
