test/e2e/chainsaw/httproute-label/resources/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: httproute-label
  namespace: default
spec:
  replicas: 2
  strategy:
    canary:
      canaryService: httproute-label-canary-service
      stableService: httproute-label-stable-service
      trafficRouting:
        plugins:
          argoproj-labs/gatewayAPI:
            httpRoute: httproute-label-basic
            namespace: default
      steps:
        - setWeight: 30
        - pause: {duration: 30s}
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: httproute-label
  template:
    metadata:
      labels:
        app: httproute-label
    spec:
      containers:
        - name: rollouts-demo
          image: argoproj/rollouts-demo:red
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
